# raffle_tickets

./: .gitignore  LICENSE  README.md  participantes.csv  pyproject.toml  requirements.txt
docs/: requirements.md
src/raffle_tickets/: cli.py  generator.py  pdf_renderer.py
tests/: test_cli.py  test_csv_reader.py  test_generetor.py  test_pdf_renderer.py
tests/data/: participants_missing_number.csv  participants_ok.csv  participants_wrong_header.csv
